[package]
name = "murmel"
version = "0.2.1"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/murmel/"
repository = "https://github.com/rust-bitcoin/murmel/"
documentation = "https://github.com/rust-bitcoin/murmel/"
description = "Murmel Bitcoin node"
keywords = [ "bitcoin" ]
readme = "README.md"
edition = "2018"

[lib]
name = "murmel"
path = "src/lib.rs"

[dependencies]
lightning = { version ="0.0.9", optional=true }
bitcoin = { version= "0.21", features=["use-serde"]}
bitcoin_hashes = "0.7"
hammersbald = { version= "2.4", features=["bitcoin_support"]}
mio = "0.6"
rand = "0.7"
log = "0.4"
simple_logger = "0.5.0"
byteorder = "1.2"
lru-cache = "0.1.1"
futures-preview = "=0.3.0-alpha.18"
futures-timer = "0.3"
serde="1"
serde_derive="1"

[dev-dependencies]
rustc-serialize = "0.3"
hex = "0.3"
tempfile = "3.0.2"
